// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EarnList  should match snapshot when lpChoice L1LP 1`] = `
<DocumentFragment>
  <div
    class="sc-ikkxIA ciecAv"
    data-testid="earn-list-item"
  >
    <div
      class="sc-eqUAAy jWPfJu sc-cPiKLX hekCwR"
    >
      <div
        class="sc-eqUAAy jWPfJu sc-dLMFU hPWVSa"
        style="max-width: 225px;"
      >
        <div
          class="sc-eqUAAy jWPfJu sc-iGgWBj xSUkw"
        >
          <div
            class="sc-fqkvVR jAPbXp"
          >
            <div
              class="sc-eqUAAy jWPfJu"
            >
              <div>
                <img
                  alt="logo"
                  class="sc-dcJsrY khyFAh"
                  src="https://raw.githubusercontent.com/bobanetwork/token-list/main/assets/usdc.svg"
                />
              </div>
              <div>
                <p
                  class="sc-aXZVg ijoHgY"
                >
                  USDC
                </p>
                <p
                  class="sc-gEvEer lhNhhM"
                >
                  USD Coin
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="sc-eqUAAy jWPfJu sc-dLMFU hPWVSa"
        style="max-width: 145px;"
      >
        <p
          class="sc-dAlyuH eGlSty"
        >
          0
        </p>
      </div>
      <div
        class="sc-eqUAAy jWPfJu sc-dLMFU hPWVSa"
        style="max-width: 115px;"
      >
        <p
          class="sc-dAlyuH eGlSty"
        >
          0
        </p>
      </div>
      <div
        class="sc-eqUAAy jWPfJu sc-dLMFU hPWVSa"
        style="max-width: 85px;"
      >
        <p
          class="sc-dAlyuH eGlSty"
        >
          0.00
        </p>
      </div>
      <div
        class="sc-eqUAAy jWPfJu sc-dLMFU hPWVSa"
        style="max-width: 90px;"
      >
        <p
          class="sc-dAlyuH eGlSty"
        >
          0.00
        </p>
      </div>
      <div
        class="sc-eqUAAy jWPfJu sc-dLMFU hPWVSa"
        style="max-width: 110px;"
      >
        <p
          class="sc-dAlyuH eGlSty"
        >
          0
        </p>
      </div>
      <div
        class="sc-eqUAAy jWPfJu sc-dLMFU hPWVSa"
        style="max-width: 75px;"
      >
        <div
          class="sc-dAbbOL iqwBcO"
          data-testid="action-btn"
        >
          <div
            class="sc-feUZmu kjINkZ"
          >
            <div>
              <div
                data-src="actions.svg"
                src=""
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`EarnList  should match snapshot when lpChoice L2LP 1`] = `
<DocumentFragment>
  <div
    class="sc-ikkxIA ciecAv"
    data-testid="earn-list-item"
  >
    <div
      class="sc-eqUAAy jWPfJu sc-cPiKLX hekCwR"
    >
      <div
        class="sc-eqUAAy jWPfJu sc-dLMFU hPWVSa"
        style="max-width: 225px;"
      >
        <div
          class="sc-eqUAAy jWPfJu sc-iGgWBj xSUkw"
        >
          <div
            class="sc-fqkvVR jAPbXp"
          >
            <div
              class="sc-eqUAAy jWPfJu"
            >
              <div>
                <img
                  alt="logo"
                  class="sc-dcJsrY khyFAh"
                  src="https://raw.githubusercontent.com/bobanetwork/token-list/main/assets/usdc.svg"
                />
              </div>
              <div>
                <p
                  class="sc-aXZVg ijoHgY"
                >
                  USDC
                </p>
                <p
                  class="sc-gEvEer lhNhhM"
                >
                  USD Coin
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="sc-eqUAAy jWPfJu sc-dLMFU hPWVSa"
        style="max-width: 145px;"
      >
        <p
          class="sc-dAlyuH eGlSty"
        >
          0
        </p>
      </div>
      <div
        class="sc-eqUAAy jWPfJu sc-dLMFU hPWVSa"
        style="max-width: 115px;"
      >
        <p
          class="sc-dAlyuH eGlSty"
        >
          0
        </p>
      </div>
      <div
        class="sc-eqUAAy jWPfJu sc-dLMFU hPWVSa"
        style="max-width: 85px;"
      >
        <p
          class="sc-dAlyuH eGlSty"
        >
          0.00
        </p>
      </div>
      <div
        class="sc-eqUAAy jWPfJu sc-dLMFU hPWVSa"
        style="max-width: 90px;"
      >
        <p
          class="sc-dAlyuH eGlSty"
        >
          0.00
        </p>
      </div>
      <div
        class="sc-eqUAAy jWPfJu sc-dLMFU hPWVSa"
        style="max-width: 110px;"
      >
        <p
          class="sc-dAlyuH eGlSty"
        >
          0
        </p>
      </div>
      <div
        class="sc-eqUAAy jWPfJu sc-dLMFU hPWVSa"
        style="max-width: 75px;"
      >
        <div
          class="sc-dAbbOL iqwBcO"
          data-testid="action-btn"
        >
          <div
            class="sc-feUZmu kjINkZ"
          >
            <div>
              <div
                data-src="actions.svg"
                src=""
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`EarnList  should match snapshot when lpChoice empty 1`] = `
<DocumentFragment>
  <div
    class="sc-ikkxIA ciecAv"
    data-testid="earn-list-item"
  >
    <div
      class="sc-eqUAAy jWPfJu sc-cPiKLX hekCwR"
    >
      <div
        class="sc-eqUAAy jWPfJu sc-dLMFU hPWVSa"
        style="max-width: 225px;"
      >
        <div
          class="sc-eqUAAy jWPfJu sc-iGgWBj xSUkw"
        >
          <div
            class="sc-fqkvVR jAPbXp"
          >
            <div
              class="sc-eqUAAy jWPfJu"
            >
              <div>
                <img
                  alt="logo"
                  class="sc-dcJsrY khyFAh"
                  src="https://raw.githubusercontent.com/bobanetwork/token-list/main/assets/usdc.svg"
                />
              </div>
              <div>
                <p
                  class="sc-aXZVg ijoHgY"
                >
                  USDC
                </p>
                <p
                  class="sc-gEvEer lhNhhM"
                >
                  USD Coin
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="sc-eqUAAy jWPfJu sc-dLMFU hPWVSa"
        style="max-width: 145px;"
      >
        <p
          class="sc-dAlyuH eGlSty"
        >
          0
        </p>
      </div>
      <div
        class="sc-eqUAAy jWPfJu sc-dLMFU hPWVSa"
        style="max-width: 115px;"
      >
        <p
          class="sc-dAlyuH eGlSty"
        >
          0
        </p>
      </div>
      <div
        class="sc-eqUAAy jWPfJu sc-dLMFU hPWVSa"
        style="max-width: 85px;"
      >
        <p
          class="sc-dAlyuH eGlSty"
        >
          0.00
        </p>
      </div>
      <div
        class="sc-eqUAAy jWPfJu sc-dLMFU hPWVSa"
        style="max-width: 90px;"
      >
        <p
          class="sc-dAlyuH eGlSty"
        >
          0.00
        </p>
      </div>
      <div
        class="sc-eqUAAy jWPfJu sc-dLMFU hPWVSa"
        style="max-width: 110px;"
      >
        <p
          class="sc-dAlyuH eGlSty"
        >
          0
        </p>
      </div>
      <div
        class="sc-eqUAAy jWPfJu sc-dLMFU hPWVSa"
        style="max-width: 75px;"
      >
        <div
          class="sc-dAbbOL iqwBcO"
          data-testid="action-btn"
        >
          <div
            class="sc-feUZmu kjINkZ"
          >
            <div>
              <div
                data-src="actions.svg"
                src=""
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`EarnList  should match snapshot when showMystake is disabled 1`] = `
<DocumentFragment>
  <div
    class="sc-ikkxIA ciecAv"
    data-testid="earn-list-item"
  >
    <div
      class="sc-eqUAAy jWPfJu sc-cPiKLX hekCwR"
    >
      <div
        class="sc-eqUAAy jWPfJu sc-dLMFU hPWVSa"
        style="max-width: 225px;"
      >
        <div
          class="sc-eqUAAy jWPfJu sc-iGgWBj xSUkw"
        >
          <div
            class="sc-fqkvVR jAPbXp"
          >
            <div
              class="sc-eqUAAy jWPfJu"
            >
              <div>
                <img
                  alt="logo"
                  class="sc-dcJsrY khyFAh"
                  src="https://raw.githubusercontent.com/bobanetwork/token-list/main/assets/usdc.svg"
                />
              </div>
              <div>
                <p
                  class="sc-aXZVg ijoHgY"
                >
                  USDC
                </p>
                <p
                  class="sc-gEvEer lhNhhM"
                >
                  USD Coin
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="sc-eqUAAy jWPfJu sc-dLMFU hPWVSa"
        style="max-width: 145px;"
      >
        <p
          class="sc-dAlyuH eGlSty"
        >
          0
        </p>
      </div>
      <div
        class="sc-eqUAAy jWPfJu sc-dLMFU hPWVSa"
        style="max-width: 115px;"
      >
        <p
          class="sc-dAlyuH eGlSty"
        >
          0
        </p>
      </div>
      <div
        class="sc-eqUAAy jWPfJu sc-dLMFU hPWVSa"
        style="max-width: 85px;"
      >
        <p
          class="sc-dAlyuH eGlSty"
        >
          0.00
        </p>
      </div>
      <div
        class="sc-eqUAAy jWPfJu sc-dLMFU hPWVSa"
        style="max-width: 90px;"
      >
        <p
          class="sc-dAlyuH eGlSty"
        >
          0.00
        </p>
      </div>
      <div
        class="sc-eqUAAy jWPfJu sc-dLMFU hPWVSa"
        style="max-width: 110px;"
      >
        <p
          class="sc-dAlyuH eGlSty"
        >
          0
        </p>
      </div>
      <div
        class="sc-eqUAAy jWPfJu sc-dLMFU hPWVSa"
        style="max-width: 75px;"
      >
        <div
          class="sc-dAbbOL iqwBcO"
          data-testid="action-btn"
        >
          <div
            class="sc-feUZmu kjINkZ"
          >
            <div>
              <div
                data-src="actions.svg"
                src=""
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`EarnList  should match snapshot when showMystake is enable 1`] = `<DocumentFragment />`;

exports[`EarnList  should match snapshot when userInfo or poolInfo is empty 1`] = `
<DocumentFragment>
  <div
    class="sc-ikkxIA ciecAv"
    data-testid="earn-list-item"
  >
    <div
      class="sc-eqUAAy jWPfJu sc-cPiKLX hekCwR"
    >
      <div
        class="sc-eqUAAy jWPfJu sc-dLMFU hPWVSa"
        style="max-width: 225px;"
      >
        <div
          class="sc-eqUAAy jWPfJu sc-iGgWBj xSUkw"
        >
          <div
            class="sc-fqkvVR jAPbXp"
          >
            <div
              class="sc-eqUAAy jWPfJu"
            >
              <div>
                <img
                  alt="logo"
                  class="sc-dcJsrY khyFAh"
                  src="https://raw.githubusercontent.com/bobanetwork/token-list/main/assets/undefined.svg"
                />
              </div>
              <div>
                <p
                  class="sc-aXZVg ijoHgY"
                />
                <p
                  class="sc-gEvEer lhNhhM"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="sc-eqUAAy jWPfJu sc-dLMFU hPWVSa"
        style="max-width: 145px;"
      >
        <p
          class="sc-dAlyuH eGlSty"
        >
          0
        </p>
      </div>
      <div
        class="sc-eqUAAy jWPfJu sc-dLMFU hPWVSa"
        style="max-width: 115px;"
      >
        <p
          class="sc-dAlyuH eGlSty"
        >
          0
        </p>
      </div>
      <div
        class="sc-eqUAAy jWPfJu sc-dLMFU hPWVSa"
        style="max-width: 85px;"
      >
        <p
          class="sc-dAlyuH eGlSty"
        >
          NaN
        </p>
      </div>
      <div
        class="sc-eqUAAy jWPfJu sc-dLMFU hPWVSa"
        style="max-width: 90px;"
      >
        <p
          class="sc-dAlyuH eGlSty"
        >
          0
        </p>
      </div>
      <div
        class="sc-eqUAAy jWPfJu sc-dLMFU hPWVSa"
        style="max-width: 110px;"
      >
        <p
          class="sc-dAlyuH eGlSty"
        >
          0
        </p>
      </div>
      <div
        class="sc-eqUAAy jWPfJu sc-dLMFU hPWVSa"
        style="max-width: 75px;"
      >
        <div
          class="sc-dAbbOL iqwBcO"
          data-testid="action-btn"
        >
          <div
            class="sc-feUZmu kjINkZ"
          >
            <div>
              <div
                data-src="actions.svg"
                src=""
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`EarnList  should match snapshot when userreward is available 1`] = `
<DocumentFragment>
  <div
    class="sc-ikkxIA ciecAv"
    data-testid="earn-list-item"
  >
    <div
      class="sc-eqUAAy jWPfJu sc-cPiKLX hekCwR"
    >
      <div
        class="sc-eqUAAy jWPfJu sc-dLMFU hPWVSa"
        style="max-width: 225px;"
      >
        <div
          class="sc-eqUAAy jWPfJu sc-iGgWBj xSUkw"
        >
          <div
            class="sc-fqkvVR jAPbXp"
          >
            <div
              class="sc-eqUAAy jWPfJu"
            >
              <div>
                <img
                  alt="logo"
                  class="sc-dcJsrY khyFAh"
                  src="https://raw.githubusercontent.com/bobanetwork/token-list/main/assets/boba.svg"
                />
              </div>
              <div>
                <p
                  class="sc-aXZVg ijoHgY"
                >
                  BOBA
                </p>
                <p
                  class="sc-gEvEer lhNhhM"
                >
                  Boba Token
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="sc-eqUAAy jWPfJu sc-dLMFU hPWVSa"
        style="max-width: 145px;"
      >
        <p
          class="sc-dAlyuH eGlSty"
        >
          614.83
        </p>
      </div>
      <div
        class="sc-eqUAAy jWPfJu sc-dLMFU hPWVSa"
        style="max-width: 115px;"
      >
        <p
          class="sc-dAlyuH eGlSty"
        >
          565.3
        </p>
      </div>
      <div
        class="sc-eqUAAy jWPfJu sc-dLMFU hPWVSa"
        style="max-width: 85px;"
      >
        <p
          class="sc-dAlyuH eGlSty"
        >
          0.00
        </p>
      </div>
      <div
        class="sc-eqUAAy jWPfJu sc-dLMFU hPWVSa"
        style="max-width: 90px;"
      >
        <p
          class="sc-dAlyuH eGlSty"
        >
          43.01
        </p>
      </div>
      <div
        class="sc-eqUAAy jWPfJu sc-dLMFU hPWVSa"
        style="max-width: 110px;"
      >
        <p
          class="sc-dAlyuH eGlSty"
        >
          0.00126
        </p>
      </div>
      <div
        class="sc-eqUAAy jWPfJu sc-dLMFU hPWVSa"
        style="max-width: 75px;"
      >
        <div
          class="sc-dAbbOL iqwBcO"
          data-testid="action-btn"
        >
          <div
            class="sc-feUZmu kjINkZ"
          >
            <div>
              <div
                data-src="actions.svg"
                src=""
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
